fixed heading alignment

--- a/src/PollutantPage/CaseStudies.css
+++ b/src/PollutantPage/CaseStudies.css
@@ -129,7 +129,7 @@
     font-family: "Nippo-Regular", Helvetica;
     font-size: 32px;
     font-weight: 400;
-    left: 340px;
+    left: 280px;
     letter-spacing: 0;
     line-height: 52.8px;
     mix-blend-mode: difference;
@@ -201,7 +201,7 @@
 }
 
 .bottom-section3 .box .text-wrapper-4 {
-    color: #ffffff;
+color: #ffffff;
     font-family: "Nippo-Regular", Helvetica;
     font-size: 32px;
     font-weight: 400;
